Add steam searching capabilities

--- a/source/Generic/SteamSearchBrowser/Localization/en_US.xaml
+++ b/source/Generic/SteamSearchBrowser/Localization/en_US.xaml
@@ -30,4 +30,6 @@
     <sys:String x:Key="LOCGamePass_Catalog_Browser_SettingsAddTagRemovedGames">Add expired tag to games removed from Game Pass</sys:String>
     <sys:String x:Key="LOCGamePass_Catalog_Browser_SettingsAddNewCatalogGamesAuto">Add newly added games when updating the Game Pass catalog to the Playnite library</sys:String>
     <sys:String x:Key="LOCGamePass_Catalog_Browser_SettingsRemoveCatalogGamesAuto">Remove removed games when updating the Game Pass catalog from the Playnite library if they have not been played</sys:String>
+    
+    <sys:String x:Key="LOCGamePass_Catalog_Browser_SearchPrompt">Enter a game name to search Steam...</sys:String>
 </ResourceDictionary>
