--- a/source/Generic/GamePassCatalogBrowser/Views/CatalogBrowserView.xaml
+++ b/source/Generic/GamePassCatalogBrowser/Views/CatalogBrowserView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="GamePassCatalogBrowser.Views.CatalogBrowserView"
+﻿<UserControl x:Class="SteamSearchBrowser.Views.CatalogBrowserView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GamePassCatalogBrowser"
+             xmlns:local="clr-namespace:SteamSearchBrowser"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="1200">
     <Grid>
